--- a/results.html
+++ b/results.html
@@ -17,7 +17,83 @@
         <div class="absolute flex flex-row">
             <div class="absolute rounded-3xl bg-white mt-[26px] ml-[17px] w-[281px] h-[228px] px-2 py-4"></div>
             <div class="absolute rounded-3xl h-[748px] bg-white mt-[26px] ml-[313px] w-[865px] px-2 py-4"></div>
-            
+            <!-- <div class="mt-8 ml-6 w-67 h-[220px] z-20">
+                <div class="font-face-agency-fb-black-condensed text-center"
+                    style="font-size: 35px; line-height: 35px; font-weight: bold; letter-spacing: 3px;">NAME</div>
+                <div class="font-face-noto-sans-condensed text-center tracking-widest flex flex-wrap justify-center"
+                    style="font-size: 20px; line-height: 22px;"><span class="whitespace-pre"><span
+                            class="leading-4 tracking-normal mr-px text-xl">A</span><span
+                            class="tracking-wider leading-3 text-base">LTER EGO</span></span></div>
+                <div class="flex flex-row justify-between mt-4">
+                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
+                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
+                                    src="https://www.jarvis-protocol.com/assets/images/e9d295985efdd834e3c7.png"
+                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
+                        </span>
+                        <div class="flex flex-col align-center -ml-3 self-center"><span
+                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
+                                    class="whitespace-pre"><span class="leading-5 text-2xl">3</span></span></span></div>
+                    </div>
+                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
+                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
+                                    src="https://www.jarvis-protocol.com/assets/images/0107812b0ce2a706b9eb.png"
+                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
+                        </span>
+                        <div class="flex flex-col align-center -ml-3 self-center"><span
+                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
+                                    class="whitespace-pre"><span class="leading-5 text-2xl">3</span></span></span></div>
+                    </div>
+                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
+                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
+                                    src="https://www.jarvis-protocol.com/assets/images/74cda4cceec102296947.png"
+                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
+                        </span>
+                        <div class="flex flex-col align-center -ml-3 self-center"><span
+                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
+                                    class="whitespace-pre"><span class="leading-5 text-2xl">3</span></span></span></div>
+                    </div>
+                </div>
+                <div class="flex flex-row mx-6 justify-around my-1">
+                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
+                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
+                                    src="https://www.jarvis-protocol.com/assets/images/b0259d18324c1b47f7f4.png"
+                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
+                        </span>
+                        <div class="flex flex-col align-center -ml-3 self-center"><span
+                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
+                                    class="whitespace-pre"><span class="leading-5 text-2xl">5</span></span></span></div>
+                    </div>
+                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
+                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
+                                    src="https://www.jarvis-protocol.com/assets/images/02e15e0cacfb89a6849d.png"
+                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
+                        </span>
+                        <div class="flex flex-col align-center -ml-3 self-center"><span
+                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
+                                    class="whitespace-pre"><span class="leading-5 text-2xl">3</span></span></span></div>
+                    </div>
+                </div>
+                <div class="flex flex-row mx-6 justify-around">
+                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
+                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
+                                    src="https://www.jarvis-protocol.com/assets/images/3de72b61afe75cc3059a.png"
+                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
+                        </span>
+                        <div class="flex flex-col align-center -ml-3 self-center"><span
+                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
+                                    class="whitespace-pre"><span class="leading-5 text-2xl">2</span></span></span></div>
+                    </div>
+                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
+                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
+                                    src="https://www.jarvis-protocol.com/assets/images/218cf667347923fafe90.png"
+                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
+                        </span>
+                        <div class="flex flex-col align-center -ml-3 self-center"><span
+                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
+                                    class="whitespace-pre"><span class="leading-5 text-2xl">S</span></span></span></div>
+                    </div>
+                </div>
+            </div> -->
             <div class="mt-8 ml-6 w-67 h-[220px] z-20">
                 <div class="font-face-agency-fb-black-condensed text-center" style="font-size: 35px; line-height: 35px; font-weight: bold; letter-spacing: 3px;">Mega Gengar</div>
                 <div class="font-face-noto-sans-condensed text-center tracking-widest flex flex-wrap justify-center" style="font-size: 20px; line-height: 22px;"><span class="whitespace-pre"><span class="leading-4 tracking-normal mr-px text-xl">A</span><span class="tracking-wider leading-3 text-base"></span></span></div>
@@ -177,7 +253,7 @@
                 <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
                         class="bg-black rounded-full z-10 w-11 h-11">
                         <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
-                                src="https://www.jarvis-protocol.com/assets/images/8a37f9988cd86357cc3c.png"
+                                src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/cfb4fc6e636210494144073f901415decbf30bf2/icons/innate.png"
                                 class="rounded-full w-11"></div>
                     </span>
                     <div class="flex flex-col align-center -ml-3 self-center w-full"><span
@@ -196,7 +272,7 @@
                 <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
                         class="bg-black rounded-full z-10 w-11 h-11">
                         <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
-                                src="https://www.jarvis-protocol.com/assets/images/8a37f9988cd86357cc3c.png"
+                                src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/cfb4fc6e636210494144073f901415decbf30bf2/icons/active.png"
                                 class="rounded-full w-11"></div>
                     </span>
                     <div class="flex flex-col align-center -ml-3 self-center w-full"><span
@@ -219,7 +295,7 @@
                 <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
                         class="bg-black rounded-full z-10 w-11 h-11">
                         <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
-                                src="https://www.jarvis-protocol.com/assets/images/8a37f9988cd86357cc3c.png"
+                                src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/cfb4fc6e636210494144073f901415decbf30bf2/icons/active.png"
                                 class="rounded-full w-11"></div>
                     </span>
                     <div class="flex flex-col align-center -ml-3 self-center w-full"><span
