--- a/template.html
+++ b/template.html
@@ -11,7 +11,7 @@
         </div>
         <div class="flip-handle absolute bottom-0 right-0 z-30 h-[70px] w-[70px] cursor-alias"></div>
         <div class="absolute w-[19.55rem] h-[546px] bottom-0 flex flex-col justify-center"><img
-                src="https://www.jarvis-protocol.com/assets/images/26fda97fffc479fefecd.png" class="artwork-loaded">
+                src="#potrait#" class="artwork-loaded">
             <div class="h-[3rem] flex shrink"></div>
         </div>
         <div class="absolute flex flex-row">
@@ -118,7 +118,7 @@
         </div>
         <div class="flip-handle absolute bottom-0 right-0 z-30 h-[70px] w-[70px] cursor-alias"></div>
         <div class="absolute w-[19.55rem] h-[546px] bottom-0 flex flex-col justify-center"><img
-                src="https://www.jarvis-protocol.com/assets/images/26fda97fffc479fefecd.png" class="">
+                src="#potrait#" class="">
             <div class="h-[3rem] flex shrink"></div>
         </div>
         <div class="absolute flex flex-row">
