fix mega gengar

--- a/results.html
+++ b/results.html
@@ -11,7 +11,7 @@
         </div>
         <div class="flip-handle absolute bottom-0 right-0 z-30 h-[70px] w-[70px] cursor-alias"></div>
         <div class="absolute w-[19.55rem] h-[546px] bottom-0 flex flex-col justify-center"><img
-                src="#potrait#" class="artwork-loaded">
+                src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/portraits/Mega%20Gengar.png" class="artwork-loaded">
             <div class="h-[3rem] flex shrink"></div>
         </div>
         <div class="absolute flex flex-row">
@@ -144,7 +144,7 @@
         <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
                 class="bg-black rounded-full z-10 w-11 h-11">
                 <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
-                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/portraits/Pokemon_Type_Icon_Ghost.png"
+                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/Pokemon_Type_Icon_Ghost.png"
                         class="rounded-full w-11"></div>
             </span>
             <div class="flex flex-col align-center -ml-3 self-center w-full"><span
@@ -171,7 +171,7 @@
         <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
                 class="bg-black rounded-full z-10 w-11 h-11">
                 <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
-                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/portraits/Pokemon_Type_Icon_Ghost.png"
+                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/Pokemon_Type_Icon_Ghost.png"
                         class="rounded-full w-11"></div>
             </span>
             <div class="flex flex-col align-center -ml-3 self-center w-full"><span
@@ -198,7 +198,7 @@
         <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
                 class="bg-black rounded-full z-10 w-11 h-11">
                 <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
-                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/portraits/Pokemon_Type_Icon_Ghost.png"
+                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/Pokemon_Type_Icon_Ghost.png"
                         class="rounded-full w-11"></div>
             </span>
             <div class="flex flex-col align-center -ml-3 self-center w-full"><span
@@ -225,7 +225,7 @@
         <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
                 class="bg-black rounded-full z-10 w-11 h-11">
                 <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
-                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/portraits/Pokemon_Type_Icon_Poison.png"
+                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/Pokemon_Type_Icon_Poison.png"
                         class="rounded-full w-11"></div>
             </span>
             <div class="flex flex-col align-center -ml-3 self-center w-full"><span
@@ -253,7 +253,7 @@
                 <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
                         class="bg-black rounded-full z-10 w-11 h-11">
                         <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
-                                src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/portraits/innate.png"
+                                src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/innate.png"
                                 class="rounded-full w-11"></div>
                     </span>
                     <div class="flex flex-col align-center -ml-3 self-center w-full"><span
@@ -272,7 +272,7 @@
                 <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
                         class="bg-black rounded-full z-10 w-11 h-11">
                         <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
-                                src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/portraits/active.png"
+                                src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/active.png"
                                 class="rounded-full w-11"></div>
                     </span>
                     <div class="flex flex-col align-center -ml-3 self-center w-full"><span
@@ -295,7 +295,7 @@
                 <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
                         class="bg-black rounded-full z-10 w-11 h-11">
                         <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
-                                src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/portraits/active.png"
+                                src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/active.png"
                                 class="rounded-full w-11"></div>
                     </span>
                     <div class="flex flex-col align-center -ml-3 self-center w-full"><span
@@ -335,7 +335,7 @@
         </div>
         <div class="flip-handle absolute bottom-0 right-0 z-30 h-[70px] w-[70px] cursor-alias"></div>
         <div class="absolute w-[19.55rem] h-[546px] bottom-0 flex flex-col justify-center"><img
-                src="#potrait#" class="">
+                src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/portraits/Mega%20Gengar.png" class="">
             <div class="h-[3rem] flex shrink"></div>
         </div>
         <div class="absolute flex flex-row">
