--- a/template.html
+++ b/template.html
@@ -17,83 +17,7 @@
         <div class="absolute flex flex-row">
             <div class="absolute rounded-3xl bg-white mt-[26px] ml-[17px] w-[281px] h-[228px] px-2 py-4"></div>
             <div class="absolute rounded-3xl h-[748px] bg-white mt-[26px] ml-[313px] w-[865px] px-2 py-4"></div>
-            <!-- <div class="mt-8 ml-6 w-67 h-[220px] z-20">
-                <div class="font-face-agency-fb-black-condensed text-center"
-                    style="font-size: 35px; line-height: 35px; font-weight: bold; letter-spacing: 3px;">NAME</div>
-                <div class="font-face-noto-sans-condensed text-center tracking-widest flex flex-wrap justify-center"
-                    style="font-size: 20px; line-height: 22px;"><span class="whitespace-pre"><span
-                            class="leading-4 tracking-normal mr-px text-xl">A</span><span
-                            class="tracking-wider leading-3 text-base">LTER EGO</span></span></div>
-                <div class="flex flex-row justify-between mt-4">
-                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
-                                    src="https://www.jarvis-protocol.com/assets/images/e9d295985efdd834e3c7.png"
-                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
-                        </span>
-                        <div class="flex flex-col align-center -ml-3 self-center"><span
-                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
-                                    class="whitespace-pre"><span class="leading-5 text-2xl">3</span></span></span></div>
-                    </div>
-                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
-                                    src="https://www.jarvis-protocol.com/assets/images/0107812b0ce2a706b9eb.png"
-                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
-                        </span>
-                        <div class="flex flex-col align-center -ml-3 self-center"><span
-                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
-                                    class="whitespace-pre"><span class="leading-5 text-2xl">3</span></span></span></div>
-                    </div>
-                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
-                                    src="https://www.jarvis-protocol.com/assets/images/74cda4cceec102296947.png"
-                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
-                        </span>
-                        <div class="flex flex-col align-center -ml-3 self-center"><span
-                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
-                                    class="whitespace-pre"><span class="leading-5 text-2xl">3</span></span></span></div>
-                    </div>
-                </div>
-                <div class="flex flex-row mx-6 justify-around my-1">
-                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
-                                    src="https://www.jarvis-protocol.com/assets/images/b0259d18324c1b47f7f4.png"
-                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
-                        </span>
-                        <div class="flex flex-col align-center -ml-3 self-center"><span
-                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
-                                    class="whitespace-pre"><span class="leading-5 text-2xl">5</span></span></span></div>
-                    </div>
-                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
-                                    src="https://www.jarvis-protocol.com/assets/images/02e15e0cacfb89a6849d.png"
-                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
-                        </span>
-                        <div class="flex flex-col align-center -ml-3 self-center"><span
-                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
-                                    class="whitespace-pre"><span class="leading-5 text-2xl">3</span></span></span></div>
-                    </div>
-                </div>
-                <div class="flex flex-row mx-6 justify-around">
-                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
-                                    src="https://www.jarvis-protocol.com/assets/images/3de72b61afe75cc3059a.png"
-                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
-                        </span>
-                        <div class="flex flex-col align-center -ml-3 self-center"><span
-                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
-                                    class="whitespace-pre"><span class="leading-5 text-2xl">2</span></span></span></div>
-                    </div>
-                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
-                                    src="https://www.jarvis-protocol.com/assets/images/218cf667347923fafe90.png"
-                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
-                        </span>
-                        <div class="flex flex-col align-center -ml-3 self-center"><span
-                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
-                                    class="whitespace-pre"><span class="leading-5 text-2xl">S</span></span></span></div>
-                    </div>
-                </div>
-            </div> -->
+            
             @yield_stats
             @HealtyAttacks
             @yield_superpowers
@@ -125,91 +49,15 @@
             <div class="absolute rounded-3xl bg-white mt-[26px] ml-[17px] w-[281px] h-[228px] px-2 py-4"></div>
             <div class="absolute rounded-3xl h-[748px] bg-white mt-[26px] ml-[313px] w-[865px] px-2 py-4"></div>
             @yield_inyured
-            <!-- <div class="mt-8 ml-6 w-67 h-[220px] z-20">
-                <div class="font-face-agency-fb-black-condensed text-center"
-                    style="font-size: 35px; line-height: 35px; font-weight: bold; letter-spacing: 3px;">NAME</div>
-                <div class="font-face-noto-sans-condensed text-center tracking-widest flex flex-wrap justify-center"
-                    style="font-size: 20px; line-height: 22px;"><span class="whitespace-pre"><span
-                            class="leading-4 tracking-normal mr-px text-xl">A</span><span
-                            class="tracking-wider leading-3 text-base">LTER EGO</span></span></div>
-                <div class="flex flex-row justify-between mt-4">
-                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
-                                    src="https://www.jarvis-protocol.com/assets/images/e9d295985efdd834e3c7.png"
-                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
-                        </span>
-                        <div class="flex flex-col align-center -ml-3 self-center"><span
-                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
-                                    class="whitespace-pre"><span class="leading-5 text-2xl">3</span></span></span></div>
-                    </div>
-                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
-                                    src="https://www.jarvis-protocol.com/assets/images/0107812b0ce2a706b9eb.png"
-                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
-                        </span>
-                        <div class="flex flex-col align-center -ml-3 self-center"><span
-                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
-                                    class="whitespace-pre"><span class="leading-5 text-2xl">3</span></span></span></div>
-                    </div>
-                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
-                                    src="https://www.jarvis-protocol.com/assets/images/74cda4cceec102296947.png"
-                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
-                        </span>
-                        <div class="flex flex-col align-center -ml-3 self-center"><span
-                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
-                                    class="whitespace-pre"><span class="leading-5 text-2xl">3</span></span></span></div>
-                    </div>
-                </div>
-                <div class="flex flex-row mx-6 justify-around my-1">
-                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
-                                    src="https://www.jarvis-protocol.com/assets/images/a81e64109982657393c2.png"
-                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
-                        </span>
-                        <div class="flex flex-col align-center -ml-3 self-center"><span
-                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
-                                    class="whitespace-pre"><span class="leading-5 text-2xl">5</span></span></span></div>
-                    </div>
-                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
-                                    src="https://www.jarvis-protocol.com/assets/images/4f552dd9f61a46487e1c.png"
-                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
-                        </span>
-                        <div class="flex flex-col align-center -ml-3 self-center"><span
-                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
-                                    class="whitespace-pre"><span class="leading-5 text-2xl">3</span></span></span></div>
-                    </div>
-                </div>
-                <div class="flex flex-row mx-6 justify-around">
-                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
-                                    src="https://www.jarvis-protocol.com/assets/images/3fbb6c8d3b3b064b80fe.png"
-                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
-                        </span>
-                        <div class="flex flex-col align-center -ml-3 self-center"><span
-                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
-                                    class="whitespace-pre"><span class="leading-5 text-2xl">2</span></span></span></div>
-                    </div>
-                    <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img
-                                    src="https://www.jarvis-protocol.com/assets/images/ac2f9c98f913d3b65d29.png"
-                                    class="rounded-full w-11 border-solid border-2 border-black"></div>
-                        </span>
-                        <div class="flex flex-col align-center -ml-3 self-center"><span
-                                class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span
-                                    class="whitespace-pre"><span class="leading-5 text-2xl">S</span></span></span></div>
-                    </div>
-                </div>
-            </div> -->
+            @injured_attacks
+            @injured_sp
             <div class="mt-8 ml-7 px-2 py-1 w-213 h-[46rem] flex flex-col z-20"></div>
         </div>
-        <div
+        <!-- <div
             class="copyright absolute bottom-[26px] left-[18px] text-white font-face-noto-sans-condensed tracking-normal">
-            © MARVEL © AMG</div>
+            @poke.crisis.miniatures</div> -->
         <div class="absolute bottom-[24px] left-[140px] text-white"><img
                 src="https://www.jarvis-protocol.com/assets/images/52022998a6c8061db499.png" class="w-[42px]"></div>
-        <div class="artist-name absolute bottom-[26px] left-44 ml-2 text-white font-face-noto-sans-condensed"><span
-                class="whitespace-pre"><span class="leading-4 text-md tracking-normal mr-px">?</span></span></div>
+     
     </div>
 </div>
