--- a/mcp_template.html
+++ b/mcp_template.html
@@ -24,11 +24,10 @@
         </div>
         <div
             class="copyright absolute bottom-[26px] left-[18px] text-white font-face-noto-sans-condensed tracking-normal">
-            ©  © </div>
-        <div class="absolute bottom-[24px] left-[140px] text-white"><img
-                src="https://www.jarvis-protocol.com/assets/images/52022998a6c8061db499.png" class="w-[42px]"></div>
+             </div>
+        <div class="absolute bottom-[24px] left-[140px] text-white"></div>
         <div class="artist-name absolute bottom-[26px] left-44 ml-2 text-white font-face-noto-sans-condensed"><span
-                class="whitespace-pre"><span class="leading-4 text-md tracking-normal mr-px">?</span></span></div>
+                class="whitespace-pre"><span class="leading-4 text-md tracking-normal mr-px"></span></span></div>
     </div>
     <div class="overflow-hidden [text-size-adjust:none] side side-1 no-print z-0">
         <picture><img src="https://www.jarvis-protocol.com/assets/images/a4c313f0ff4f66f7ec80.png" width="100%"
