poke crisis dragonair

--- a/results.html
+++ b/results.html
@@ -145,11 +145,34 @@
         </ul>
     </div>
 </div><div class="flex flex-shrink h-[20px]"></div>
+            <div class="w-full flex flex-col cursor-pointer">
+            <div class="flex flex-row">
+                <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
+                        class="bg-black rounded-full z-10 w-11 h-11">
+                        <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
+                                src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/active.png"
+                                class="rounded-full w-11"></div>
+                    </span>
+                    <div class="flex flex-col align-center -ml-3 self-center w-full"><span
+                            class="pill bg-black py-1 text-white font-bold font-face-agency-fb-bold h-[2.1rem] whitespace-nowrap rounded-r-full w-full pl-4 pr-4 leading-6.5 text-2.5xl"><span
+                                class="whitespace-pre"><span class="leading-6.5 text-2.5xl">S</span><span
+                                    class="tracking-wider leading-5 text-xl">HED SKIN</span></span></span></div>
+                </div>
+                <div class="flex flex-row items-center mr-1 h-11">
+                    <div class="flex flex-row bg-black rounded-full ml-1 items-center pr-[0.4rem] h-9"><img
+                            src="https://www.jarvis-protocol.com/assets/images/f0ea0a964b55961f664a.png" class="w-9 h-9"><span
+                            class="font-face-noto-sans-condensed-bold text-white text-1.5xl ml-2.5">2</span></div>
+                </div>
             </div>
+            <div class="h-[4px] shrink"></div>
+            <div data-component="superpower-content"
+                class="font-face-noto-sans-condensed mt-[-4px] [word-spacing:-0.5px] ml-[2.7rem] text-xl leading-[1.3rem]">
+                <span>Roll one die. On a result (crit, wild, or hit), remove one special condition from this character.</span></div>
+        </div><div class="flex flex-shrink h-[20px]"></div></div>
         </div>
         <div
             class="copyright absolute bottom-[26px] left-[18px] text-white font-face-noto-sans-condensed tracking-normal">
-            ©  © </div>
+            patreon.com/pokecrisis</div>
         <div class="absolute bottom-[24px] left-[140px] text-white"><img
                 src="https://www.jarvis-protocol.com/assets/images/52022998a6c8061db499.png" class="w-[42px]"></div>
         <div class="artist-name absolute bottom-[26px] left-44 ml-2 text-white font-face-noto-sans-condensed"><span
@@ -322,12 +345,58 @@
         <div class="h-[2px] shrink"></div>
         <ul class="list-disc ml-7 mt-[-2px]">
             <li data-component="special-rule"
-                class="pl-2 mb-1 last:mb-0 [word-spacing:-0.5px] leading-[1.3rem] text-xl"><span><span>
+                class="pl-2 mb-1 last:mb-0 [word-spacing:-0.5px] leading-[1.3rem] text-xl"><span><span>If a wild is rolled during this attack, the target character is given the Stagger special condition.
                     </span></span></li>
         </ul>
     </div>
 </div><div class="flex flex-shrink h-[20px]"></div>
+            <div class="w-full flex flex-col cursor-pointer">
+            <div class="flex flex-row">
+                <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
+                        class="bg-black rounded-full z-10 w-11 h-11">
+                        <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
+                                src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/active.png"
+                                class="rounded-full w-11"></div>
+                    </span>
+                    <div class="flex flex-col align-center -ml-3 self-center w-full"><span
+                            class="pill bg-black py-1 text-white font-bold font-face-agency-fb-bold h-[2.1rem] whitespace-nowrap rounded-r-full w-full pl-4 pr-4 leading-6.5 text-2.5xl"><span
+                                class="whitespace-pre"><span class="leading-6.5 text-2.5xl">S</span><span
+                                    class="tracking-wider leading-5 text-xl">HED SKIN</span></span></span></div>
+                </div>
+                <div class="flex flex-row items-center mr-1 h-11">
+                    <div class="flex flex-row bg-black rounded-full ml-1 items-center pr-[0.4rem] h-9"><img
+                            src="https://www.jarvis-protocol.com/assets/images/f0ea0a964b55961f664a.png" class="w-9 h-9"><span
+                            class="font-face-noto-sans-condensed-bold text-white text-1.5xl ml-2.5">2</span></div>
+                </div>
             </div>
+            <div class="h-[4px] shrink"></div>
+            <div data-component="superpower-content"
+                class="font-face-noto-sans-condensed mt-[-4px] [word-spacing:-0.5px] ml-[2.7rem] text-xl leading-[1.3rem]">
+                <span>Roll one die. On a result (crit, wild, or hit), remove one special condition from this character.</span></div>
+        </div><div class="flex flex-shrink h-[20px]"></div><div class="w-full flex flex-col cursor-pointer">
+            <div class="flex flex-row">
+                <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
+                        class="bg-black rounded-full z-10 w-11 h-11">
+                        <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
+                                src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/active.png"
+                                class="rounded-full w-11"></div>
+                    </span>
+                    <div class="flex flex-col align-center -ml-3 self-center w-full"><span
+                            class="pill bg-black py-1 text-white font-bold font-face-agency-fb-bold h-[2.1rem] whitespace-nowrap rounded-r-full w-full pl-4 pr-4 leading-6.5 text-2.5xl"><span
+                                class="whitespace-pre"><span class="leading-6.5 text-2.5xl">E</span><span
+                                    class="tracking-wider leading-5 text-xl">VOLUTION</span></span></span></div>
+                </div>
+                <div class="flex flex-row items-center mr-1 h-11">
+                    <div class="flex flex-row bg-black rounded-full ml-1 items-center pr-[0.4rem] h-9"><img
+                            src="https://www.jarvis-protocol.com/assets/images/f0ea0a964b55961f664a.png" class="w-9 h-9"><span
+                            class="font-face-noto-sans-condensed-bold text-white text-1.5xl ml-2.5">3</span></div>
+                </div>
+            </div>
+            <div class="h-[4px] shrink"></div>
+            <div data-component="superpower-content"
+                class="font-face-noto-sans-condensed mt-[-4px] [word-spacing:-0.5px] ml-[2.7rem] text-xl leading-[1.3rem]">
+                <span>Replace this character with a Dragonair character of the same injured status. The new character begins with damage equal to the damage on this character and power equal to the power on this character.</span></div>
+        </div><div class="flex flex-shrink h-[20px]"></div></div>
             <div class="mt-8 ml-7 px-2 py-1 w-213 h-[46rem] flex flex-col z-20"></div>
         </div>
         <!-- <div
