--- a/template.html
+++ b/template.html
@@ -24,7 +24,7 @@
         </div>
         <div
             class="copyright absolute bottom-[26px] left-[18px] text-white font-face-noto-sans-condensed tracking-normal">
-            ©  © </div>
+            patreon.com/pokecrisis</div>
         <div class="absolute bottom-[24px] left-[140px] text-white"><img
                 src="https://www.jarvis-protocol.com/assets/images/52022998a6c8061db499.png" class="w-[42px]"></div>
         <div class="artist-name absolute bottom-[26px] left-44 ml-2 text-white font-face-noto-sans-condensed"><span
