--- a/affiliation_template_vertical.html
+++ b/affiliation_template_vertical.html
@@ -66,9 +66,7 @@
         <div class="font-face-agency-fb-black-condensed text-center mt-5 mb-2 flex justify-center items-center text-3xl tracking-wider h-12 z-10 bg-[#FAFCFC] py-1 shadow-inner uppercase">
             @AffiliationName
         </div>
-        <div class="flex grow items-center justify-center z-10">
-            <img src="https://www.jarvis-protocol.com/assets/images/52022998a6c8061db499.png" class="w-32 opacity-50">
-        </div>
+        <div class="flex grow z-10"></div>
         <div class="flip-handle absolute top-0 left-0 z-30 h-[70px] w-[70px] cursor-alias"></div>
         <div class="flip-handle absolute top-0 right-0 z-30 h-[70px] w-[70px] cursor-alias"></div>
         <div class="flip-handle absolute bottom-0 left-0 z-30 h-[90px] w-[90px] cursor-pointer">
