--- a/results/psyduck_not_now_ttc.html
+++ b/results/psyduck_not_now_ttc.html
@@ -42,8 +42,6 @@
 <span class="flex flex-row grow mb-1"></span>
 <span>• Remove a negative condition</span>
 
-                <span class="flex flex-row grow mb-2"></span>
-                <b class="font-face-noto-sans-condensed-medium">Restriction: </b><span>Misty's Team only.</span>
             </div>
         </div>
         
@@ -56,7 +54,7 @@
                 <span class="font-face-noto-sans-condensed-medium text-lg leading-4">©</span>
                 <span class="text-lg leading-5 tracking-wide mx-1">POKE.CRISIS</span>
                 <img src="https://www.jarvis-protocol.com/assets/images/52022998a6c8061db499.png" class="w-[30px]">
-                <span class="text-lg leading-5 ml-1 grow font-face-noto-sans-condensed italic">Chaotic interruption, low cost, high situational impact.</span>
+                <span class="text-lg leading-5 ml-1 grow font-face-noto-sans-condensed">patreon.com/pokecrisis</span>
             </span>
         </div>
         
