--- a/ttc_template.html
+++ b/ttc_template.html
@@ -31,8 +31,6 @@
             <!-- Effect Text -->
             <div class="mt-1 font-face-noto-sans-condensed text-base leading-5 px-12">
                 @EffectList
-                <span class="flex flex-row grow mb-2"></span>
-                <b class="font-face-noto-sans-condensed-medium">Restriction: </b><span>@Restriction</span>
             </div>
         </div>
         
@@ -45,7 +43,7 @@
                 <span class="font-face-noto-sans-condensed-medium text-lg leading-4">©</span>
                 <span class="text-lg leading-5 tracking-wide mx-1">POKE.CRISIS</span>
                 <img src="https://www.jarvis-protocol.com/assets/images/52022998a6c8061db499.png" class="w-[30px]">
-                <span class="text-lg leading-5 ml-1 grow font-face-noto-sans-condensed italic">@Identity</span>
+                <span class="text-lg leading-5 ml-1 grow font-face-noto-sans-condensed">patreon.com/pokecrisis</span>
             </span>
         </div>
         
