--- a/results/cerulean_gym_ttc.html
+++ b/results/cerulean_gym_ttc.html
@@ -36,8 +36,6 @@
 <span class="flex flex-row grow mb-1"></span>
 <span>Enemies within Range 2 of that Pokémon cannot push or displace allies this turn.</span>
 
-                <span class="flex flex-row grow mb-2"></span>
-                <b class="font-face-noto-sans-condensed-medium">Restriction: </b><span>Can only be included in a squad affiliated with Misty's Team.</span>
             </div>
         </div>
         
@@ -50,7 +48,7 @@
                 <span class="font-face-noto-sans-condensed-medium text-lg leading-4">©</span>
                 <span class="text-lg leading-5 tracking-wide mx-1">POKE.CRISIS</span>
                 <img src="https://www.jarvis-protocol.com/assets/images/52022998a6c8061db499.png" class="w-[30px]">
-                <span class="text-lg leading-5 ml-1 grow font-face-noto-sans-condensed italic">Zone defense and objective control.</span>
+                <span class="text-lg leading-5 ml-1 grow font-face-noto-sans-condensed">patreon.com/pokecrisis</span>
             </span>
         </div>
         
